starter native package and integrate

--- a/Cielo/android/build.gradle
+++ b/Cielo/android/build.gradle
@@ -56,7 +56,7 @@ def configureReactNativePom(def pom) {
         name packageJson.title
         artifactId packageJson.name
         version = packageJson.version
-        group = "com.reactlibrary"
+        group = "com.thebylito"
         description packageJson.description
         url packageJson.repository.baseUrl
 
