--- a/Cielo/package.json
+++ b/Cielo/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "react-native-cielo",
   "title": "React Native Cielo",
@@ -17,26 +16,22 @@
     "react-native"
   ],
   "author": {
-    "name": "Your Name",
-    "email": "yourname@email.com"
+    "name": "Welington da Silva",
+    "email": "thebylito@gmail.com"
   },
   "license": "Apache-2.0",
   "licenseFilename": "LICENSE",
   "readmeFilename": "README.md",
   "peerDependencies": {
-    
     "react": "16.0.0-alpha.6",
     "prop-types": "^15.6.2",
     "react-native": "^0.55.4",
     "react-native-windows": "0.41.0-rc.1"
-
   },
   "devDependencies": {
-    
     "react": "16.0.0-alpha.6",
     "prop-types": "^15.6.2",
     "react-native": "^0.55.4",
     "react-native-windows": "0.41.0-rc.1"
- 
   }
 }
