--- a/Cielo/android/src/main/AndroidManifest.xml
+++ b/Cielo/android/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
-
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.thebylito">
+    package="com.thebylito">
 
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
-  
