--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,5 +1,6 @@
 rootProject.name = 'reactnativecieloexample'
 include ':react-native-cielo'
 project(':react-native-cielo').projectDir = new File(rootProject.projectDir, '../Cielo/android')
-
+include ':sdk'
+project(':sdk').projectDir = new File(rootProject.projectDir, '../Cielo/android/sdk')
 include ':app'
